Fixed marging on mobile devices

--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -95,7 +95,7 @@
     font-size: 20px;
   }
 
-  .contact-image-div {
-    display: none;
-  }
+  // .contact-image-div {
+  //   display: none;
+  // }
 }
